--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Azrael's Seraphim Grading Service - Montréal Card Grading</title>
+<meta name="google-site-verification" content="eJe9de38DRBsQHlE5mbxTEZnaTXQeqQldi4KxfyZJsQ" /><title>Azrael's Seraphim Grading Service - Montréal Card Grading</title>
 <meta name="description" content= "Fast, Fair, and Quality local card grading for Magic the Gathering, Yu-Gi-Oh, Pokémon, Cardfight Vanguard, Sports Cards & More!
 Nothing eludes my eyes!">
 <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Crimson+Text&family=Uncial+Antiqua&display=swap" rel="stylesheet">
