--- a/index.html
+++ b/index.html
@@ -74,13 +74,15 @@ background: #3e281f;
 </style>
 </head>
 <body>
-<div id="parchment">
+    <div style="text-align:center; padding:1em; background:#f5e8d3; border-bottom:1px solid #8a4d0f;">
+  <a href="/" style="color:#5c4033; font-weight:bold; margin:0 1em; text-decoration:none;">English</a> |
+  <a href="/fr.html" style="color:#5c4033; font-weight:bold; margin:0 1em; text-decoration:none;">Français</a><div id="parchment">
 <h1>Azrael's Seraphim Grading Service</h1>
 <h2> Brought to you by Cardinal 9 Games | Montréal's Trusted Card Grading, Now Official!</h2>
 <div class="section">
 <p style="text-align:enter; font-size:1.3em;"?
 Fast | Fair | Local | Honest<br>
-Pokémon | Magic: The Gathering | Yu-Gi-Oh! | Sports Cards & More!
+Pokémon | Magic: The Gathering | Yu-Gi-Oh! | Cardfight Vanguard | Sports Cards & More!
 </p>
 </div>
 
