--- a/fr.html
+++ b/fr.html
@@ -122,8 +122,8 @@ Pokémon | Magic: The Gathering | Yu-Gi-Oh! | Cardfight Vanguard | Cartes de Spo
 
 <div class="section" style="text-align:center;">
 <h2>Ready to Submit Your Request?</h2>
->p style="margin-bottom:2em; font-style:italic; color:#3e2723; max-width:700px; margin-left: auto; margin-right: auto;">
-Send me details and photos of your cards! | Replies generally within 24 - 48 Hours upon receiving!
+<p style="margin-bottom:2em; font-style:italic; color:#3e2723; max-width:700px; margin-left: auto; margin-right: auto;">
+Soumettre les détails et les photos. de vos cartes! | Reponse environ dans les première  24 - 48 heures!
 </p>
 <form action="https://formspree.io/f/xnjqajgg" method="Post" enctype="multipart/form-data">
 
