--- a/fr.html
+++ b/fr.html
@@ -121,7 +121,7 @@ Pokémon | Magic: The Gathering | Yu-Gi-Oh! | Cardfight Vanguard | Cartes de Spo
 </div>
 
 <div class="section" style="text-align:center;">
-<h2>Ready to Submit Your Request?</h2>
+<h2>Êtes Vous Prêt?</h2>
 <p style="margin-bottom:2em; font-style:italic; color:#3e2723; max-width:700px; margin-left: auto; margin-right: auto;">
 Soumettre les détails et les photos. de vos cartes! | Reponse environ dans les première  24 - 48 heures!
 </p>
