--- a/fr.html
+++ b/fr.html
@@ -141,7 +141,7 @@ Soumettre les détails et les photos. de vos cartes! | Reponse environ dans les 
 Ecrivez votre liste: nom, set, année, quantité, condition a l'achat, soyez précis!</small>
 <textarea id="cards" name="cards" rows="6" placeholder="Example:\nCharizard Base Set 4/102, Near Mint, x1\nPikachu Promo, Lightly Played, x3" required></textarea><br><br>
 
-    <label for="photos">Soumettre les images (recto-verso SVP plusieurs images OK):</label><br>
+    <label for="photos">Soumettre les images (recto-verso SVP plusieurs images):</label><br>
     <input type="file" id="photos" name="photos[]" accept="image/*" multiple><br><br>
 
     <!-- Honeypot spam prevention field -->
